--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,198 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+:root {
+  --header-height: 3rem;
+  --nav-width: 68px;
+
+  --first-color: #2455fe;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+a {
+  text-decoration: none;
+}
+
+ul {
+  list-style: none;
+}
+
+body {
+  overflow-x: hidden;
+}
+
+main {
+  position: relative;
+  font-size: 1rem;
+  font-family: "Nunito Sans", sans-serif;
+  transition: 0.5s;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: var(--header-height);
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 1rem;
+  transition: 0.3s;
+}
+
+.header-toggle {
+  font-size: 1.25rem;
+  cursor: pointer;
+  color: var(--first-color);
+}
+
+.sidebar {
+  position: fixed;
+  top: 0;
+  left: -30%;
+  height: 100vh;
+  width: var(--nav-width);
+  background-color: var(--first-color);
+  padding-top: 1rem;
+  transition: width 0.3s;
+}
+
+.nav {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  overflow: hidden;
+  height: 100%;
+}
+
+.show {
+  left: 0;
+  width: calc(var(--header-height) + 220px);
+}
+
+.content {
+  transition: 0.3s;
+  margin: var(--header-height) 0 0 0;
+}
+
+.ham {
+  cursor: pointer;
+  -webkit-tap-highlight-color: transparent;
+  transition: transform 400ms;
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+.line {
+  fill: none;
+  transition: stroke-dasharray 0.3s, stroke-dashoffset 0.3s;
+  stroke: #000;
+  stroke-width: 5.5;
+  stroke-linecap: round;
+}
+
+.ham2 .top {
+  stroke-dasharray: 40 121;
+}
+.ham2 .bottom {
+  stroke-dasharray: 40 121;
+}
+.ham2.active .top {
+  stroke-dashoffset: -102px;
+}
+.ham2.active .bottom {
+  stroke-dashoffset: -102px;
+}
+
+.sideNav-link {
+  color: white;
+  font-weight: 700;
+  font-size: 20px;
+  background-color: transparent;
+  margin-top: 16px;
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  padding: 5px 0px 5px 0px ;
+}
+
+.sideNav-link span {
+  display: none;
+}
+
+.sideNav-link:hover {
+  background-color: white;
+  color: var(--first-color);
+}
+
+.signin{
+  color: #2455fe;
+  background-color: white;
+  justify-content: center;
+}
+
+@media screen and (max-width: 768px) {
+  .header.space-toggle {
+    transform: translateX(calc(var(--header-height) + 220px));
+    padding-left: 0px;
+  }
+
+  .content.space-toggle {
+    transform: translateX(calc(var(--header-height) + 220px));
+  }
+  .sideNav-link span {
+    display: block;
+  }
+  
+}
+
+@media screen and (min-width: 768px) {
+  .content {
+    margin: calc(var(--header-height) + 1rem) 0 0 0;
+  }
+
+  main {
+    padding-left: var(--nav-width);
+  }
+
+  .header {
+    height: calc(var(--header-height) + 1rem);
+    padding-left: calc(var(--nav-width) + 2rem);
+  }
+
+  .sidebar {
+    left: 0;
+    padding: 1rem 0 0 0;
+  }
+
+  .show {
+    width: calc(var(--header-height) + 156px);
+  }
+
+  .space-toggle {
+    padding-left: calc(var(--nav-width) + 130px);
+  }
+  .space-toggle2 {
+    padding-left: calc(var(--nav-width) * 2);
+  }
+  .show .sideNav-link span {
+    display: block;
+  }
+
+  .hide {
+    transform: scale(2.5);
+    transition: .3s;
+  }
+}
