--- a/src/css/loginpage.css
+++ b/src/css/loginpage.css
@@ -43,8 +43,17 @@
     border: 3px solid var(--first-color);
 }
 
+.radio input:disabled ~ .label{
+    border: 3px solid rgba(182, 182, 250, 0.39);
+}
+
+
 .radio input:checked ~ .label .checked{
 display: block;
+}
+
+.radio input:disabled ~ .label .checked{
+    color: rgb(156, 174, 201);
 }
 
 form .required{
@@ -59,11 +68,18 @@ form .required{
     border-radius: 6px;
     border: 3px solid rgba(182, 182, 250, 0.39);
     transition: .3s ease-in-out;
+    
 }
 
 .form-group.active{
     border: 3px solid var(--first-color);
 }
+
+.form-group.disabled{
+    border: 3px solid rgba(182, 182, 250, 0.39);
+}
+
+
 
 .form-group input {
     position: absolute;
@@ -83,7 +99,7 @@ form .required{
     transition: .3s ease-in-out;
 }
 
-.form-group.active label{
+.form-group.active label , .form-group.disabled label{
     position: absolute;
     background-color: white;
     padding: 0px 10px 0px 10px;
@@ -96,3 +112,93 @@ form .required{
     font-weight: bold;
     font-size: 18px;
 }
+
+.nb{
+    transform: translateY(1.4cm);
+}
+
+#submit:disabled{
+background-color: #d9e0f7 ;
+}
+
+
+.checkbtn{
+    position: relative;
+    padding-left: 40px;
+    display: flex;
+    padding-top: 5px;
+    padding: 5px 10px 5px 40px;
+    border-radius: 5px;
+    transition: .1s ease-in-out;
+
+}
+
+.checkbtn .box{
+    height: .6cm;
+    width: .6cm;
+    background: #e0e0e0;
+    position: absolute;
+    top: 5px;
+    left: 10px;
+    border-radius: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 2px solid transparent;
+    transition: .3s ease-in-out;
+}
+
+.checkbtn .box::after{
+    content: '';
+    height: .3cm;
+    width: .3cm;
+    background: #b4b4b4;
+    border-radius: 100%;
+}
+
+.prompt input{
+   opacity: 0;
+
+}
+
+.prompt input:checked ~ .checkbtn .box{
+    background-color: transparent;
+    border: 2px solid rgb(0, 17, 255);
+
+}
+.prompt input:checked ~ .checkbtn .box::after{
+    background-color: rgb(0, 60, 255);
+
+}
+
+.prompt input:checked ~ .checkbtn{
+    background-color: rgba(14, 4, 150, 0.226);
+    border: 4px solid rgba(7, 57, 221, 0.815);
+
+}
+
+.submittedAlert{
+    height: 100%;
+    width: 100%;
+    background-color: white;
+    position: fixed;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.spinner {
+    width: 31px;
+    height: 31px;
+    border: 10px #030585 double;
+    border-left-style: solid;
+    border-radius: 50%;
+    animation: spinner-aib1d7 1.0499999999999998s infinite linear;
+ }
+ 
+ @keyframes spinner-aib1d7 {
+    to {
+       transform: rotate(360deg);
+    }
+ }
