Post, Get and submittited added

--- a/src/css/loader.css
+++ b/src/css/loader.css
@@ -26,8 +26,42 @@
   border-radius: 50%;
 }
 
+.custom-loader.small {
+  width: 25px;
+  height: 25px;
+  --c: radial-gradient(farthest-side,#766DF4 92%,#0000);
+  background: 
+    var(--c) 50%  0, 
+    var(--c) 50%  100%, 
+    var(--c) 100% 50%, 
+    var(--c) 0    50%;
+  background-size: 5px 5px;
+  background-repeat: no-repeat;
+  animation: s8 0.5s infinite;
+  position: relative;
+}
+.custom-loader.small::before {    
+  content:"";
+  position: absolute;
+  inset:0;
+  margin: 1.5px;
+  background:repeating-conic-gradient(#0000 0 35deg,#766DF4 0 90deg);
+  -webkit-mask:radial-gradient(farthest-side,#0000 calc(100% - 1.5px),#000 0);
+  border-radius: 50%;
+}
+
+.custom-loader.white{
+  --c: radial-gradient(farthest-side,#ffffff 92%,#585b6800);
+}
+
+.custom-loader.white::before{
+  background:repeating-conic-gradient(#ffffff00 0 35deg,#ffffff 0 90deg);
+  -webkit-mask:radial-gradient(farthest-side,#ffffff00 calc(100% - 1.5px),#ffffff 0);
+}
+
 @keyframes s8 {
   100% {
     transform: rotate(0.5turn);
   }
 }
+
