--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,11 @@
   user-select: none;
 }
 
+body{
+  height: 100vh;
+  overflow: hidden;
+}
+
 a {
   text-decoration: none;
 }
@@ -45,6 +50,7 @@ main {
   transition: 0.5s;
   display: flex;
   flex-wrap: wrap;
+  overflow: hidden;
 }
 
 .header,
@@ -148,7 +154,9 @@ main {
 
 .content {
   transition: 0.3s;
-  margin: var(--header-height) 0 0 0;
+  margin-top: calc( var(--header-height) + 5rem) ;
+  height: 100vh;
+  overflow-y: hidden;
 }
 
 .ham {
@@ -285,7 +293,7 @@ input:disabled {
 
 @media screen and (min-width: 768px) {
   .content {
-    margin: calc(var(--header-height) + 1rem) 0 0 0;
+    margin-top: calc(var(--header-height) + 1rem);
   }
 
   main {
